[tool.poetry]
name = "bookmarks-timeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bookmarks_timeline"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.29.0"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
